--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>World Clock</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+  <svg class="clock"></svg>
   <script src="https://d3js.org/d3.v4.min.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
