--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
   <svg class="clock"></svg>
   <script src="https://d3js.org/d3.v4.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.19.2/moment.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.14/moment-timezone-with-data.min.js"></script>
   <script src="app.js"></script>
 </body>
 </html>
